--- a/.gitignore
+++ b/.gitignore
@@ -42,5 +42,8 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
-# Environment file
+# Environment files
 *_env.json
+
+# Generated files
+service_locator.config.dart
