--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.5.1
+  collection: ^1.18.0
+  dio: ^5.4.3+1
+  get_it: ^7.7.0
+  injectable: ^2.4.2
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  build_runner: ^2.4.11
+  mocktail: ^1.0.4
+  injectable_generator: ^2.6.1
 
 flutter:
   uses-material-design: true
